kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: at-sre-challenge
  labels:
    name: at-sre-challenge
