kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: at-sre-challenge
spec:
  # TODO: We should use a HPA to scale the number of replicas based on the load.
  # For this challenge, we will use a fixed number of replicas.
  replicas: 2
  selector:
    matchLabels:
      app: at-sre-challenge
  template:
    metadata:
      labels:
        app: at-sre-challenge
    spec:
      containers:
      - name: at-sre-challenge
        image: at-sre-challenge:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10

      terminationGracePeriodSeconds: 10
