kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: at-sre-challenge
spec:
  selector:
    app: at-sre-challenge
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
